fix alignwide and full margins
#2mf43t

--- a/assets/scss/blocks/_gallery.scss
+++ b/assets/scss/blocks/_gallery.scss
@@ -1,19 +1,35 @@
-.wp-block-gallery:not(.alignleft):not(.alignright) {
-	margin: rem-calc(100) 0;
+.wp-block-gallery {
 
-	@include bp-down( sm ) {
-		margin: rem-calc(60) 0;
+	&:not(.alignleft):not(.alignright) {
+		margin-bottom: rem-calc(100);
+		margin-top: rem-calc(100);
+
+		@include bp-down( sm ) {
+			margin-bottom: rem-calc(60);
+			margin-top: rem-calc(60);
+		}
 	}
-}
 
-.wp-block-gallery.alignleft {
-	float: left;
-	margin: rem-calc(8) rem-calc(16) rem-calc(16) 0;
-}
+	&.alignleft {
+		float: left;
+		margin: rem-calc(8) rem-calc(16) rem-calc(16) 0;
+	}
 
-.wp-block-gallery.alignright {
-	float: right;
-	margin: rem-calc(8) 0 rem-calc(16) rem-calc(16);
+	&.alignright {
+		float: right;
+		margin: rem-calc(8) 0 rem-calc(16) rem-calc(16);
+	}
+
+	&.alignwide,
+	&.alignfull {
+		padding-left: rem-calc($container-padding);
+		padding-right: rem-calc($container-padding);
+
+		@include bp-down(sm) {
+			padding-left: rem-calc($container-mobile-padding);
+			padding-right: rem-calc($container-mobile-padding);
+		}
+	}
 }
 
 .blocks-gallery-grid .blocks-gallery-image,
